--- a/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
+++ b/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
@@ -98,14 +98,81 @@
                     <view key="view" contentMode="scaleToFill" id="K2V-aX-Fv7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Business Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBC-ay-989">
+                                <rect key="frame" x="20" y="88" width="374" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="goT-Yd-YG2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PvZ-A5-LUF">
+                                <rect key="frame" x="20" y="224" width="66" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="contact name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFI-gu-DQl">
+                                <rect key="frame" x="94" y="224" width="105" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbm-eq-yRf">
+                                <rect key="frame" x="20" y="263" width="53" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2265478833" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ah1-zw-egj">
+                                <rect key="frame" x="94" y="263" width="101" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pLB-G3-qhy">
+                                <rect key="frame" x="20" y="384" width="374" height="429"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X2F-PF-G4j">
+                                <rect key="frame" x="20" y="292" width="374" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Call Tommorow"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="DZa-Su-w1b"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="qbm-eq-yRf" firstAttribute="leading" secondItem="DZa-Su-w1b" secondAttribute="leading" constant="20" id="02V-Zg-eee"/>
+                            <constraint firstItem="DZa-Su-w1b" firstAttribute="trailing" secondItem="X2F-PF-G4j" secondAttribute="trailing" constant="20" id="5fu-P2-3jz"/>
+                            <constraint firstItem="ZFI-gu-DQl" firstAttribute="leading" secondItem="PvZ-A5-LUF" secondAttribute="trailing" constant="8" symbolic="YES" id="6O9-Q6-jdS"/>
+                            <constraint firstItem="ah1-zw-egj" firstAttribute="leading" secondItem="qbm-eq-yRf" secondAttribute="trailing" constant="21" id="8CW-nN-zXj"/>
+                            <constraint firstItem="PvZ-A5-LUF" firstAttribute="leading" secondItem="DZa-Su-w1b" secondAttribute="leading" constant="20" id="ABA-L9-w9d"/>
+                            <constraint firstItem="DZa-Su-w1b" firstAttribute="trailing" secondItem="JBC-ay-989" secondAttribute="trailing" constant="20" id="FhR-Z6-uBd"/>
+                            <constraint firstItem="ah1-zw-egj" firstAttribute="top" secondItem="ZFI-gu-DQl" secondAttribute="bottom" constant="18" id="QsL-G5-ddp"/>
+                            <constraint firstItem="DZa-Su-w1b" firstAttribute="trailing" secondItem="pLB-G3-qhy" secondAttribute="trailing" constant="20" id="UQY-xn-BsQ"/>
+                            <constraint firstItem="PvZ-A5-LUF" firstAttribute="top" secondItem="JBC-ay-989" secondAttribute="bottom" constant="8" symbolic="YES" id="XO0-b1-IL0"/>
+                            <constraint firstItem="pLB-G3-qhy" firstAttribute="bottom" secondItem="DZa-Su-w1b" secondAttribute="bottom" id="d2d-cA-QrO"/>
+                            <constraint firstItem="JBC-ay-989" firstAttribute="top" secondItem="DZa-Su-w1b" secondAttribute="top" id="dYk-Ro-nwv"/>
+                            <constraint firstItem="X2F-PF-G4j" firstAttribute="leading" secondItem="DZa-Su-w1b" secondAttribute="leading" constant="20" id="hs0-hi-r8n"/>
+                            <constraint firstItem="pLB-G3-qhy" firstAttribute="leading" secondItem="DZa-Su-w1b" secondAttribute="leading" constant="20" id="iYM-Ro-lHW"/>
+                            <constraint firstItem="JBC-ay-989" firstAttribute="leading" secondItem="DZa-Su-w1b" secondAttribute="leading" constant="20" id="is1-CJ-3zJ"/>
+                            <constraint firstItem="X2F-PF-G4j" firstAttribute="top" secondItem="qbm-eq-yRf" secondAttribute="bottom" constant="8" symbolic="YES" id="jxM-xV-cMM"/>
+                            <constraint firstItem="pLB-G3-qhy" firstAttribute="top" secondItem="X2F-PF-G4j" secondAttribute="bottom" constant="61" id="ky1-VT-p0P"/>
+                            <constraint firstItem="DZa-Su-w1b" firstAttribute="trailing" secondItem="ZFI-gu-DQl" secondAttribute="trailing" constant="215" id="qsz-qL-Nt9"/>
+                            <constraint firstItem="qbm-eq-yRf" firstAttribute="top" secondItem="PvZ-A5-LUF" secondAttribute="bottom" constant="18" id="sQK-gC-59f"/>
+                            <constraint firstItem="DZa-Su-w1b" firstAttribute="trailing" secondItem="ah1-zw-egj" secondAttribute="trailing" constant="219" id="wTj-aN-YBY"/>
+                            <constraint firstItem="ZFI-gu-DQl" firstAttribute="top" secondItem="JBC-ay-989" secondAttribute="bottom" constant="8" symbolic="YES" id="wlu-fT-Lha"/>
+                            <constraint firstItem="X2F-PF-G4j" firstAttribute="top" secondItem="ah1-zw-egj" secondAttribute="bottom" constant="8" symbolic="YES" id="zYx-U2-Rg0"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FQ7-S2-7i4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7eP-0d-LEm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2467" y="566"/>
+            <point key="canvasLocation" x="2466.666666666667" y="565.17857142857144"/>
         </scene>
         <!--Business Directory-->
         <scene sceneID="O4K-wB-W79">
