--- a/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
+++ b/BusinessDirectory/Storyboards/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="contactCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactCell" rowHeight="113" id="d5K-TT-8qR">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="contactCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactCell" rowHeight="113" id="d5K-TT-8qR" customClass="ContactTableViewCell" customModule="BusinessDirectory" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="113"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d5K-TT-8qR" id="h8Q-Mc-IZv">
@@ -70,6 +70,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="businessHead" destination="Vb9-Gv-H2n" id="lRl-AL-Q5f"/>
+                                            <outlet property="businessImage" destination="IOk-6i-TIl" id="OQr-KC-7ba"/>
+                                            <outlet property="companyName" destination="pmH-Pd-K6l" id="7WJ-bg-C5X"/>
                                             <segue destination="hUr-p3-gJb" kind="show" id="xFG-Xg-Wpb"/>
                                         </connections>
                                     </tableViewCell>
